--- a/app/views/availabilities/index.html.erb
+++ b/app/views/availabilities/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Availabilities</h1>
+<h2>Availabilities <%= availability_new_link(@doctor) %></h2>
+
 
 <table class="table table-bordered">
   <thead>
@@ -7,7 +8,6 @@
     <th>Start at</th>
     <th>End at</th>
     <th>Day off</th>
-    <th colspan="2">Actions</th>
   </tr>
   </thead>
 
@@ -18,13 +18,7 @@
         <td><%= availability.start_at %></td>
         <td><%= availability.end_at %></td>
         <td><%= availability.day_off %></td>
-        <td><%= link_to 'Edit', edit_doctor_availability_path(@doctor, availability) %></td>
-        <td><%= link_to 'Destroy', doctor_availability_path(@doctor, availability), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
   <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Availability', new_doctor_availability_path(@doctor), class: 'btn btn-primary' %>
