--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -2,14 +2,22 @@
 <div class="row">
   <% @doctors.each do |doctor| %>
       <div class="col-lg-12">
-        <div class="col-lg-2">
+        <div class="col-lg-2 text-center">
           <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle">
+          <br>
+          <% 5.times do |i| %>
+              <i class="glyphicon glyphicon-star<%= '-empty' if i > doctor.average_rating %>"></i>
+          <% end %>
+          <br>
+          <%= rating_new_link(doctor) %>
         </div>
         <div class="col-lg-6">
           <div class="header">
             <p><%= link_to doctor.name, doctor_path(doctor), style: 'font-size: 23px;' %></p>
             <i style="font-size: 15px;"><%= doctor.degrees %></i>
+
             <p style="font-size: 17px; font-weight: 400"><%= doctor.specialist %></p>
+
             <p><%= doctor.about_me %></p>
 
             <span class="glyphicon glyphicon-phone"><%= doctor.phone %></span> |
@@ -39,6 +47,8 @@
           </table>
         </div>
       </div>
-      <div class="col-xs-12"><hr></div>
+      <div class="col-xs-12">
+        <hr>
+      </div>
   <% end %>
 </div>
