--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -1,14 +1,13 @@
-<%= simple_form_for(@rating) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for([@doctor, @rating], wrapper: :horizontal_form) do |f| %>
+    <div class="form-inputs">
+      <%= f.input :doctor_id, collection: [[@doctor.name, @doctor.id]], prompt: false %>
+      <%= f.input :number, input_html: {class: 'rating'} %>
+      <%= f.input :comments %>
+      <%= f.hidden_field :patient_id, value: current_user.id %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :doctor_id %>
-    <%= f.input :patient_id %>
-    <%= f.input :number %>
-    <%= f.input :comments %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
 <% end %>
+
