--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,31 +1,24 @@
 <h1>Listing ratings</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
-    <tr>
-      <th>Doctor</th>
-      <th>Patient</th>
-      <th>Number</th>
-      <th>Comments</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Doctor</th>
+    <th>Patient</th>
+    <th>Number</th>
+    <th>Comments</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @ratings.each do |rating| %>
+  <% @ratings.each do |rating| %>
       <tr>
         <td><%= rating.doctor_id %></td>
         <td><%= rating.patient_id %></td>
         <td><%= rating.number %></td>
         <td><%= rating.comments %></td>
-        <td><%= link_to 'Show', rating %></td>
-        <td><%= link_to 'Edit', edit_rating_path(rating) %></td>
-        <td><%= link_to 'Destroy', rating, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Rating', new_rating_path %>
