--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,10 @@
 <div class="jumbotron row">
   <div class="row text-center">
     <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle">
+    <br>
+    <%= render partial: 'doctors/ratings', locals: {doctor: @doctor} %>
+    <br>
+    <%= rating_new_link(@doctor) %>
   </div>
   <div class="col-lg-6">
     <h2>
@@ -86,4 +90,26 @@
       <% end %>
     </table>
   </div>
+</div>
+
+<h2 class="page-header">Reviews</h2>
+
+<div class="row">
+  <% @doctor.ratings.each do |rating| %>
+      <div class="col-lg-12">
+        <div class="col-lg-2 text-center">
+          <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=50" class="img-circle">
+          <br>
+          <%= link_to rating.patient.name, rating.patient %>
+        </div>
+        <div class="col-lg-10">
+          <%= render partial: 'ratings/ratings', locals: {rating: rating} %>
+          <br>
+          <%= rating.comments %>
+        </div>
+      </div>
+      <div class="col-xs-12">
+        <hr>
+      </div>
+  <% end %>
 </div>
