--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,7 +3,7 @@
   <% @doctors.each do |doctor| %>
       <div class="col-lg-12">
         <div class="col-lg-2 text-center">
-          <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle">
+          <%= render partial: 'shared/show_image', locals: {obj: doctor} %>
           <br>
           <%= render partial: 'doctors/ratings', locals: {doctor: doctor} %>
           <br>
