--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron row">
   <div class="row text-center">
-    <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=100" class="img-circle">
+    <%= render partial: 'shared/show_image', locals: {obj: @doctor} %>
     <br>
     <%= render partial: 'doctors/ratings', locals: {doctor: @doctor} %>
     <br>
@@ -98,7 +98,7 @@
   <% @doctor.ratings.each do |rating| %>
       <div class="col-lg-12">
         <div class="col-lg-2 text-center">
-          <img alt="User Pic" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=50" class="img-circle">
+          <%= render partial: 'shared/show_image', locals: {obj: rating.patient} %>
           <br>
           <%= link_to rating.patient.name, rating.patient %>
         </div>
