--- a/app/views/hospital_authorities/show.html.erb
+++ b/app/views/hospital_authorities/show.html.erb
@@ -1,4 +1,5 @@
 <div class="jumbotron row">
+  <%= render partial: 'shared/show_image', locals: {obj: @hospital_authority} %>
   <h2>
     <%= @hospital_authority.name %>
     <%= hospital_authority_edit_link(@hospital_authority) %>
