--- a/app/views/hospitals/show.html.erb
+++ b/app/views/hospitals/show.html.erb
@@ -1,4 +1,5 @@
 <div class="jumbotron row">
+  <%= render partial: 'shared/show_image', locals: {obj: @hospital} %>
   <h2>
     <%= @hospital.name %>
     <%= hospital_edit_link(@hospital) %>
