--- a/app/views/ratings/_ratings.html.erb
+++ b/app/views/ratings/_ratings.html.erb
@@ -1,3 +1,3 @@
 <% 5.times do |i| %>
-    <i class="glyphicon glyphicon-star<%= '-empty' if i+1 > rating.number %>"></i>
+    <i class="glyphicon glyphicon-star<%= '-empty' if i+1 > rating.number.to_i %>"></i>
 <% end %>
