--- a/app/views/doctors/_ratings.html.erb
+++ b/app/views/doctors/_ratings.html.erb
@@ -1,3 +1,3 @@
 <% 5.times do |i| %>
-    <i class="glyphicon glyphicon-star<%= '-empty' if i+1 > doctor.average_rating %>"></i>
+    <i class="glyphicon glyphicon-star<%= '-empty' if i+1 > doctor.average_rating.to_i %>"></i>
 <% end %>
