--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -92,24 +92,4 @@
   </div>
 </div>
 
-<h2 class="page-header">Reviews</h2>
-
-<div class="row">
-  <% @doctor.ratings.each do |rating| %>
-      <div class="col-lg-12">
-        <div class="col-lg-2 text-center">
-          <%= render partial: 'shared/show_image', locals: {obj: rating.patient} %>
-          <br>
-          <%= link_to rating.patient.name, rating.patient %>
-        </div>
-        <div class="col-lg-10">
-          <%= render partial: 'ratings/ratings', locals: {rating: rating} %>
-          <br>
-          <%= rating.comments %>
-        </div>
-      </div>
-      <div class="col-xs-12">
-        <hr>
-      </div>
-  <% end %>
-</div>
+<%= render partial: 'doctors/reviews', locals: {ratings: @doctor.ratings} %>
