--- a/app/views/doctors/search.html.erb
+++ b/app/views/doctors/search.html.erb
@@ -3,7 +3,7 @@
     <h3>Find a doctor's!</h3>
     <%= form_tag doctors_path, method: :get do %>
         <div class="input-group">
-          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search with Name, Location, Speciality" %>
+          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search with Name, Speciality, Location, Hospital etc." %>
           <span class="input-group-btn">
              <%= submit_tag "Search", class: "btn btn-default" %>
           </span>
